--- a/Segundo_avance.html
+++ b/Segundo_avance.html
@@ -395,7 +395,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <h2 class="anchored" data-anchor-id="figura-de-elipces"><span style="color: #3690c0;">Figura de elipces</span></h2>
 <div id="fig-Figura1" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="Exploratorios_microalgas_files/figure-html/fig-fig1-1.png" class="img-fluid figure-img" width="700"></p>
+<p><img src="Segundo_avance_files/figure-html/1.png" class="img-fluid figure-img"></p>
 <figcaption class="figure-caption">Figura&nbsp;1: Relación entre las variables ambientales y los taxones de microalgas perifíticas en los tres tributarios de la cuenca media del Rio Gaira. Las elipse con azul intenso representan las relaciones lineales positivas y las de color rojo intenso, corresponden a las relaciones lineales negativas o inversas entre las parejas de variables.</figcaption>
 </figure>
 </div>
@@ -405,7 +405,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <h2 class="anchored" data-anchor-id="figuras-de-elipces-con-variables-transformadas"><span style="color: #3690c0;">Figuras de elipces con variables transformadas</span></h2>
 <div id="fig-Figura2" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="Exploratorios_microalgas_files/figure-html/fig-fig2-1.png" class="img-fluid figure-img" width="700"></p>
+<p><img src="Segundo_avance_files/figure-html/2.png" class="img-fluid figure-img"></p>
 <figcaption class="figure-caption">Figura&nbsp;2: Relación entre los taxones VS los taxones de microalgas perifíticas en los tres tributarios de la cuenca media del Rio Gaira.</figcaption>
 </figure>
 </div>
@@ -413,7 +413,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <p>Figura 3. Ambientales y biologicas VS Ambientales y biologicas transformadas con Hellinger.</p>
 <div id="fig-Figura3" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="Exploratorios_microalgas_files/figure-html/fig-fig3-1.png" class="img-fluid figure-img" width="700"></p>
+<p><img src="Segundo_avance_files/figure-html/3.png" class="img-fluid figure-img"></p>
 <figcaption class="figure-caption">Figura&nbsp;3: Relación entre las variables ambientales VS los taxones de microalgas perifíticas en los tres tributarios de la cuenca media del Rio Gaira.</figcaption>
 </figure>
 </div>
@@ -423,21 +423,21 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <h2 class="anchored" data-anchor-id="figura-de-cajas"><span style="color: #3690c0;">Figura de cajas</span></h2>
 <div id="fig-Figura4" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="Exploratorios_microalgas_files/figure-html/fig-fig4-1.png" class="img-fluid figure-img" width="700"></p>
+<p><img src="Segundo_avance_files/figure-html/4.png" class="img-fluid figure-img"></p>
 <figcaption class="figure-caption">Figura&nbsp;4: Variación en la densidad de microalgas para los tres tributarios de la cuenca media del Rio Gaira.</figcaption>
 </figure>
 </div>
 <p>En la <a href="#fig-Figura4">Figura&nbsp;4</a> se puede observar que las cajas se encuentran solapadas y las medianas de los tres tributarios son practicamente iguales, además existe unan alta dispersion de los datos, lo que indica que no existe una verdadera diferenciacion en la densidad de microalgas entre cada tributario evaluado.</p>
 <div id="fig-Figura5" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="Exploratorios_microalgas_files/figure-html/fig-fig5-1.png" class="img-fluid figure-img" width="700"></p>
+<p><img src="Segundo_avance_files/figure-html/5.png" class="img-fluid figure-img"></p>
 <figcaption class="figure-caption">Figura&nbsp;5: Variación entre la densidad de los diferentes taxones de microalgas perifiticas para los tres tributarios de la cuenca media del Rio Gaira.</figcaption>
 </figure>
 </div>
 <p>En la <a href="#fig-Figura5">Figura&nbsp;5</a> se observa que en general para la mayoria de los taxones no existe una diferencia en la densidad total de microalgas por cada tributario, las medias de los tres tributarios son similares y los intervalos de confianza se encuentran solapados. Para el taxon <strong><em>Achnanthes</em></strong> se puede observar que en tributario Jabali los datos de densidad se alejan de la tendencia anteriormente mencionada y en otros taxones como <strong><em>Girosigma</em></strong> y <strong><em>Suriella</em></strong> los valores de densidad presentan una dispercion mucho mayor en el tributario La Victoria.</p>
 <div id="fig-Figura6" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="Exploratorios_microalgas_files/figure-html/fig-fig6-1.png" class="img-fluid figure-img" width="700"></p>
+<p><img src="Segundo_avance_files/figure-html/6.png" class="img-fluid figure-img"></p>
 <figcaption class="figure-caption">Figura&nbsp;6: Distribucion de frecuencia de los factores fisicoquimicos en cada uno de los tres tributarios evaluados.</figcaption>
 </figure>
 </div>
@@ -909,33 +909,33 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 <span id="cb5-91"><a href="#cb5-91" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb5-92"><a href="#cb5-92" aria-hidden="true" tabindex="-1"></a><span class="fu">## [Figura de elipces]{style="color: #3690c0;"}</span></span>
 <span id="cb5-93"><a href="#cb5-93" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb5-94"><a href="#cb5-94" aria-hidden="true" tabindex="-1"></a><span class="al">![Relación entre las variables ambientales y los taxones de microalgas perifíticas en los tres tributarios de la cuenca media del Rio Gaira. Las elipse con azul intenso representan las relaciones lineales positivas y las de color rojo intenso, corresponden a las relaciones lineales negativas o inversas entre las parejas de variables.](Exploratorios_microalgas_files/figure-html/fig-fig1-1.png)</span>{#fig-Figura1 fig-align="center" width="700"}</span>
+<span id="cb5-94"><a href="#cb5-94" aria-hidden="true" tabindex="-1"></a><span class="al">![Relación entre las variables ambientales y los taxones de microalgas perifíticas en los tres tributarios de la cuenca media del Rio Gaira. Las elipse con azul intenso representan las relaciones lineales positivas y las de color rojo intenso, corresponden a las relaciones lineales negativas o inversas entre las parejas de variables.](Segundo_avance_files/figure-html/1.png)</span>{#fig-Figura1 fig-align="center"}</span>
 <span id="cb5-95"><a href="#cb5-95" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb5-96"><a href="#cb5-96" aria-hidden="true" tabindex="-1"></a>En la @fig-Figura1 se observan algunas relaciones lineales fuertes entre taxones como es el caso de ***Surirella*** con ***Girosigma*** y ***Gomphonema***. Las relaciones màs fuertes se estan dando entre parejas de taxones. Sin embargo en general no se presentan muchas relaciones lineales fuertes tanto positivas como negativas.</span>
 <span id="cb5-97"><a href="#cb5-97" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb5-98"><a href="#cb5-98" aria-hidden="true" tabindex="-1"></a><span class="fu">## [Figuras de elipces con variables transformadas]{style="color: #3690c0;"}</span></span>
 <span id="cb5-99"><a href="#cb5-99" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb5-100"><a href="#cb5-100" aria-hidden="true" tabindex="-1"></a><span class="al">![Relación entre los taxones VS los taxones de microalgas perifíticas en los tres tributarios de la cuenca media del Rio Gaira.](Exploratorios_microalgas_files/figure-html/fig-fig2-1.png)</span>{#fig-Figura2 fig-align="center" width="700"}</span>
+<span id="cb5-100"><a href="#cb5-100" aria-hidden="true" tabindex="-1"></a><span class="al">![Relación entre los taxones VS los taxones de microalgas perifíticas en los tres tributarios de la cuenca media del Rio Gaira.](Segundo_avance_files/figure-html/2.png)</span>{#fig-Figura2 fig-align="center"}</span>
 <span id="cb5-101"><a href="#cb5-101" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb5-102"><a href="#cb5-102" aria-hidden="true" tabindex="-1"></a>En la @fig-Figura2 se observan unicamente relaciones lineales positivas entre parejas de taxones y se descartan las relaciones más bajas. En general todas las relaciones son batante fuertes las más significativas estan dadas entre ***Calonesis*** con ***Girosigma*** y ***Chamaepinnularia*** con ***Eolimna.*** Se observaque en mayor o menor proporcion la presencia de los diferentes taxones se encuentra favoreciendo a los demás taxones.</span>
 <span id="cb5-103"><a href="#cb5-103" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb5-104"><a href="#cb5-104" aria-hidden="true" tabindex="-1"></a>Figura 3. Ambientales y biologicas VS Ambientales y biologicas transformadas con Hellinger.</span>
 <span id="cb5-105"><a href="#cb5-105" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb5-106"><a href="#cb5-106" aria-hidden="true" tabindex="-1"></a><span class="al">![Relación entre las variables ambientales VS los taxones de microalgas perifíticas en los tres tributarios de la cuenca media del Rio Gaira.](Exploratorios_microalgas_files/figure-html/fig-fig3-1.png)</span>{#fig-Figura3 fig-align="center" width="700"}</span>
+<span id="cb5-106"><a href="#cb5-106" aria-hidden="true" tabindex="-1"></a><span class="al">![Relación entre las variables ambientales VS los taxones de microalgas perifíticas en los tres tributarios de la cuenca media del Rio Gaira.](Segundo_avance_files/figure-html/3.png)</span>{#fig-Figura3 fig-align="center"}</span>
 <span id="cb5-107"><a href="#cb5-107" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb5-108"><a href="#cb5-108" aria-hidden="true" tabindex="-1"></a>En la @fig-Figura3 se observan muy pocas relaciones significativas entre las variables fisicoquimicas y los taxones. Se encuentran algunas relaciones negativas entre la Luz y ***Surirella***, ***Lyngbya***, ***Eolimna*** y ***Gomphonema***. En cuanto a las demás parejas de variables se aprecian algunas relaciones positivas con la temperatura y el pH, siendo la relacion entre la temperatura y ***Surirella*** la más fuerte.</span>
 <span id="cb5-109"><a href="#cb5-109" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb5-110"><a href="#cb5-110" aria-hidden="true" tabindex="-1"></a><span class="fu">## [Figura de cajas]{style="color: #3690c0;"}</span></span>
 <span id="cb5-111"><a href="#cb5-111" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb5-112"><a href="#cb5-112" aria-hidden="true" tabindex="-1"></a><span class="al">![Variación en la densidad de microalgas para los tres tributarios de la cuenca media del Rio Gaira.](Exploratorios_microalgas_files/figure-html/fig-fig4-1.png)</span>{#fig-Figura4 fig-align="center" width="700"}</span>
+<span id="cb5-112"><a href="#cb5-112" aria-hidden="true" tabindex="-1"></a><span class="al">![Variación en la densidad de microalgas para los tres tributarios de la cuenca media del Rio Gaira.](Segundo_avance_files/figure-html/4.png)</span>{#fig-Figura4 fig-align="center"}</span>
 <span id="cb5-113"><a href="#cb5-113" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb5-114"><a href="#cb5-114" aria-hidden="true" tabindex="-1"></a>En la @fig-Figura4 se puede observar que las cajas se encuentran solapadas y las medianas de los tres tributarios son practicamente iguales, además existe unan alta dispersion de los datos, lo que indica que no existe una verdadera diferenciacion en la densidad de microalgas entre cada tributario evaluado.</span>
 <span id="cb5-115"><a href="#cb5-115" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb5-116"><a href="#cb5-116" aria-hidden="true" tabindex="-1"></a><span class="al">![Variación entre la densidad de los diferentes taxones de microalgas perifiticas para los tres tributarios de la cuenca media del Rio Gaira.](Exploratorios_microalgas_files/figure-html/fig-fig5-1.png)</span>{#fig-Figura5 fig-align="center" width="700"}</span>
+<span id="cb5-116"><a href="#cb5-116" aria-hidden="true" tabindex="-1"></a><span class="al">![Variación entre la densidad de los diferentes taxones de microalgas perifiticas para los tres tributarios de la cuenca media del Rio Gaira.](Segundo_avance_files/figure-html/5.png)</span>{#fig-Figura5 fig-align="center"}</span>
 <span id="cb5-117"><a href="#cb5-117" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb5-118"><a href="#cb5-118" aria-hidden="true" tabindex="-1"></a>En la @fig-Figura5 se observa que en general para la mayoria de los taxones no existe una diferencia en la densidad total de microalgas por cada tributario, las medias de los tres tributarios son similares y los intervalos de confianza se encuentran solapados. Para el taxon ***Achnanthes*** se puede observar que en tributario Jabali los datos de densidad se alejan de la tendencia anteriormente mencionada y en otros taxones como ***Girosigma*** y ***Suriella*** los valores de densidad presentan una dispercion mucho mayor en el tributario La Victoria.</span>
 <span id="cb5-119"><a href="#cb5-119" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb5-120"><a href="#cb5-120" aria-hidden="true" tabindex="-1"></a><span class="al">![Distribucion de frecuencia de los factores fisicoquimicos en cada uno de los tres tributarios evaluados.](Exploratorios_microalgas_files/figure-html/fig-fig6-1.png)</span>{#fig-Figura6 fig-align="center" width="700"}</span>
+<span id="cb5-120"><a href="#cb5-120" aria-hidden="true" tabindex="-1"></a><span class="al">![Distribucion de frecuencia de los factores fisicoquimicos en cada uno de los tres tributarios evaluados.](Segundo_avance_files/figure-html/6.png)</span>{#fig-Figura6 fig-align="center"}</span>
 <span id="cb5-121"><a href="#cb5-121" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb5-122"><a href="#cb5-122" aria-hidden="true" tabindex="-1"></a>En la @fig-Figura6 se observa que para todas las variables ambientales los valores de la media son muy similares o incluso iguales en algunos casos para cada uno de los trubutarios, mientras que el rango de los datos varia mucho más entre tributarios para algunas variables como el Nitrito. Sin enbargo para todos los fisicoquimicos exepto el Oxigeno existe la precencia de outliers los cuales pueden causar sesgos en parametros como la media, distarcionar considerablemente el analisis grafico alterando las escalas lo que puede ocacionar que los datos parescan más dipersos de lo que en verdad son. Todo esto puede ocultar patrones importantes llevando a conclusiones sesgadas.</span>
 <span id="cb5-123"><a href="#cb5-123" aria-hidden="true" tabindex="-1"></a></span>
